Forsida finished, dark mode fixed, byrja nuna a tickests síðu

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,22 @@
 .copyright {
     color: var(--lt-txt-2);
 }
+.scrollUp {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    background-color: var(--lt-bg-1);
+    color: var(--lt-txt-1);
+    border: 1px solid var(--lt-txt-1);
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .scrollUp {
+      display: block;
+    }
+  }
