--- a/css/slide.css
+++ b/css/slide.css
@@ -11,6 +11,7 @@
     white-space: nowrap;
     animation: slideRightToLeft 45s linear infinite;
     opacity: 0;
+    color: var(--lt-txt-1);
   }
   
 .slide:nth-child(1) { animation-delay: 0s; }
@@ -54,6 +55,7 @@
       font-size: 6rem;
       animation: slideRightToLeft 40s linear infinite;
     }
+    
     .slide:nth-child(2) {animation-delay: 20s;}
     .slide:nth-child(3) {display: none;}
     @keyframes slideRightToLeft {
