--- a/css/table.css
+++ b/css/table.css
@@ -3,15 +3,18 @@ table {
     border: none;
     background-color:var(--lt-bg-1);
     text-align: center;
-    margin: auto;
-    width: 80%;
+    margin: 0 auto
 }
 table td {
     color: var(--lt-txt-1);
     text-align: center;
     padding: 1rem 0 1rem 0;
 }
-@media screen and (max-width: 600px) {
+th {
+  color: var(--lt-txt-1);
+  padding: 0 4rem 0 4rem;
+}
+@media screen and (max-width: 768px) {
     .tour table {
       border: 0;
       width: 100%;
