--- a/css/topmenu.css
+++ b/css/topmenu.css
@@ -5,16 +5,18 @@
 }
 .topnav {
     background-color: var(--lt-bg-1);
+    padding: 0 0 15rem 0;
 }
 .topmenu {
     display: flex;
     flex-flow: column;
-    position: fixed;
+    position: absolute;
     top: -100rem;
     background-color: var(--lt-bg-1);
     z-index: 98;
     transition: all .5s ease;
     width: 100%;
+    border-bottom: 2px solid var(--lt-txt-1);
 }
 .menuinput:checked ~ .topmenu{
     top: 0;
@@ -30,6 +32,7 @@
     text-decoration: none;
     text-align: center;
     flex-grow: 1;
+    border-left: 2px solid var(--lt-txt-1);
 }
 .topmenu a:hover {
     border-bottom: 1px solid var(--lt-txt-1);
@@ -39,17 +42,20 @@
 }
 .menulabel {
     background-color: var(--lt-bg-1);
-    position: fixed;
+    position: absolute;
     color: var(--lt-txt-1);
-    font-size: 10rem;
+    font-size: 8rem;
     z-index: 1000;
-
 }
 .menulabel:active{
     opacity: 70%;
 }
 
 @media screen and (min-width:768px) {
+    .topnav {
+        background-color: var(--lt-bg-1);
+        padding: 0;
+    }
     .topmenu {
         flex-flow: row;
         margin: auto;
@@ -70,6 +76,7 @@
         text-align: center;
     }
     .topmenu a {
+        border: none;
         display: block;
         color: var(--lt-txt-1);
         padding: .5rem 0 .5rem 0;
